[package]
name = "rste"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "steal"
path = "src/steal.rs"

[[bin]]
name = "login"
path = "src/login.rs"

[dependencies]
zip = "0.6"
reqwest = { version = "0.11", features = ["multipart", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
context7 = "0.1"
